Spacing issue resolved on search button

--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -421,10 +421,7 @@
     font-weight: 600;
 }
 .cont2 button i{
-    margin-left: 7px;
-}
-.cont2{
-
+    margin-right: 7px;
 }
 
 .workFlow-content .icon {
