--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1434,7 +1434,7 @@
 		left: 0;
 	}
 	#cont7{
-		margin-top: 181px;
+		margin-top: 208px;
 	}
 	.team-container{
 		padding-bottom: 100px;
